clang-ir/tests/snapshots/snapshot_fixtures__fixtures__libyaml_type_shapes.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/libyaml_type_shapes.c" (c, x86_64-unknown-linux-gnu)
global __const.main.buffer : u8i[4] = zero [cir_private, default, dso_local, constant]
global __const.main.tag : u8i[22] = "tag:yaml.org,2002:str" [cir_private, default, dso_local, constant]
global __const.main.input : u8i[4] = "abc" [cir_private, default, dso_local, constant]
global .str : s8i[14] = "%d %lu %c %c\n" [cir_private, default, align 1, dso_local, constant]

fn read_bytes(%arg0: void*, %arg1: u8i*, %arg2: u64i, %arg3: u64i*) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: void*, %arg1: u8i*, %arg2: u64i, %arg3: u64i*):
        %40 = alloca void*, "data", align 8
        %41 = alloca u8i*, "buffer", align 8
        %42 = alloca u64i, "size", align 8
        %43 = alloca u64i*, "size_read", align 8
        %44 = alloca s32i, "__retval", align 4
        %45 = alloca u8i*, "source", align 8
        store %arg0, %40
        store %arg1, %41
        store %arg2, %42
        store %arg3, %43
        %46 = load %40 : void*, align 8
        %47 = cast(bitcast) %46 : u8i*
        store %47, %45, align 8
        scope {
            %52 = alloca u64i, "i", align 8
            %53 = const 0 : u64i
            store %53, %52, align 8
            for cond: {
                %63 = load %52 : u64i, align 8
                %64 = load %42 : u64i, align 8
                %65 = cmp lt %63, %64 : bool
                condition %65
            } step: {
                %54 = load %52 : u64i, align 8
                %55 = inc %54 : u64i
                store %55, %52, align 8
                yield
            } do {
                scope {
                    %56 = load %52 : u64i, align 8
                    %57 = load %45 : u8i*, align 8
                    %58 = ptr_stride %57, %56 : u8i*
                    %59 = load %58 : u8i, align 1
                    %60 = load %52 : u64i, align 8
                    %61 = load %41 : u8i*, align 8
                    %62 = ptr_stride %61, %60 : u8i*
                    store %59, %62, align 1
                    yield
                }
                yield
            }
            yield
        }
        %48 = load %42 : u64i, align 8
        %49 = load %43 : u64i*, align 8
        store %48, %49, align 8
        %50 = const 1 : s32i
        store %50, %44
        %51 = load %44 : s32i
        return %51
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u8i[4], "input", align 1
    %2 = alloca u8i[22], "tag", align 16
    %3 = alloca u8i[4], "buffer", align 1
    %4 = alloca u64i, "size_read", align 8
    %5 = alloca rec_parser_t, "parser", align 8
    %6 = alloca s32i, "ok", align 4
    %7 = const 0 : s32i
    store %7, %0
    %8 = get_global @__const.main.input : u8i[4]*
    copy %1, %8
    %9 = get_global @__const.main.tag : u8i[22]*
    copy %2, %9
    %10 = get_global @__const.main.buffer : u8i[4]*
    copy %3, %10
    %11 = const 0 : u64i
    store %11, %4, align 8
    %12 = get_global @read_bytes : ((void*, u8i*, u64i, u64i*) -> s32i)*
    %13 = get_member %5[0] "read_handler" : ((void*, u8i*, u64i, u64i*) -> s32i)**
    store %12, %13, align 8
    %14 = cast(array_to_ptrdecay) %1 : u8i*
    %15 = cast(bitcast) %14 : void*
    %16 = get_member %5[1] "read_handler_data" : void**
    store %15, %16, align 8
    %17 = get_member %5[0] "read_handler" : ((void*, u8i*, u64i, u64i*) -> s32i)**
    %18 = load %17 : ((void*, u8i*, u64i, u64i*) -> s32i)*, align 8
    %19 = get_member %5[1] "read_handler_data" : void**
    %20 = load %19 : void*, align 8
    %21 = cast(array_to_ptrdecay) %3 : u8i*
    %22 = const 3 : u64i
    %23 = call %18(%20, %21, %22, %4) : s32i [all]
    store %23, %6, align 4
    %24 = get_global @printf : ((s8i*, ...) -> s32i)*
    %25 = get_global @.str : s8i[14]*
    %26 = cast(array_to_ptrdecay) %25 : s8i*
    %27 = load %6 : s32i, align 4
    %28 = load %4 : u64i, align 8
    %29 = const 1 : s64i
    %30 = get_element %3[%29] : u8i*
    %31 = load %30 : u8i, align 1
    %32 = cast(integral) %31 : s32i
    %33 = const 4 : s64i
    %34 = get_element %2[%33] : u8i*
    %35 = load %34 : u8i, align 4
    %36 = cast(integral) %35 : s32i
    %37 = call @printf(%26, %27, %28, %32, %36) : s32i [all]
    %38 = const 0 : s32i
    store %38, %0
    %39 = load %0 : s32i
    return %39
}
