clang-ir/tests/snapshots/snapshot_fixtures__fixtures__local_named_enum_declaration.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/local_named_enum_declaration.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "ok\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[7] = "error\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_Case[2], "cases", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 1 : u32i
    %4 = const 0 : s64i
    %5 = get_element %1[%4] : rec_Case*
    %6 = get_member %5[0] "expectedStatus" : u32i*
    store %3, %6, align 4
    %7 = const 0 : u32i
    %8 = const 1 : s64i
    %9 = get_element %1[%8] : rec_Case*
    %10 = get_member %9[0] "expectedStatus" : u32i*
    store %7, %10, align 4
    scope {
        %13 = alloca s32i, "i", align 4
        %14 = const 0 : s32i
        store %14, %13, align 4
        for cond: {
            %34 = load %13 : s32i, align 4
            %35 = const 2 : s32i
            %36 = cmp lt %34, %35 : bool
            condition %36
        } step: {
            %15 = load %13 : s32i, align 4
            %16 = inc %15 : s32i [nsw]
            store %16, %13, align 4
            yield
        } do {
            scope {
                %17 = alloca u32i, "expectedStatus", align 4
                %18 = load %13 : s32i, align 4
                %19 = cast(integral) %18 : s64i
                %20 = get_element %1[%19] : rec_Case*
                %21 = get_member %20[0] "expectedStatus" : u32i*
                %22 = load %21 : u32i, align 4
                store %22, %17, align 4
                scope {
                    %23 = load %17 : u32i, align 4
                    %24 = const 1 : u32i
                    %25 = cmp eq %23, %24 : bool
                    if %25 {
                        %30 = get_global @printf : ((s8i*, ...) -> s32i)*
                        %31 = get_global @.str : s8i[4]*
                        %32 = cast(array_to_ptrdecay) %31 : s8i*
                        %33 = call @printf(%32) : s32i [all]
                        yield
                    } else {
                        %26 = get_global @printf : ((s8i*, ...) -> s32i)*
                        %27 = get_global @.str.1 : s8i[7]*
                        %28 = cast(array_to_ptrdecay) %27 : s8i*
                        %29 = call @printf(%28) : s32i [all]
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %11 = const 0 : s32i
    store %11, %0
    %12 = load %0 : s32i
    return %12
}
